--- a/examples/myfaces20-example/src/main/webapp/resources/styles/main.css
+++ b/examples/myfaces20-example/src/main/webapp/resources/styles/main.css
@@ -2,6 +2,15 @@
     background-color: yellow;
 }
 
+.stdBox {
+    display: table;
+    background-color: white;
+    border: 1px solid black;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+}
+
+
 /*==================================================
     Basic CSS information for our compiler
     output component
@@ -19,23 +28,38 @@ div.warningsLabel {
     padding-top: 5px;
     padding-bottom: 10px;
     padding-left: 5px;
+    width: 100%;
+    margin-top: 10px;
+    border-top: 1px solid black;
 }
 
 div.errorBox {
     width: 800px;
     heigh: 200px;
+
+
     display: block;
     overflow: auto;
     border: 1px solid black;
     background-color: #ffffcc;
+
+    -moz-border-radius:5px;
+    border-radius:5px;
+    padding: 5px;
 }
 
 div.errorBox .line {
     display: table;
-    width: 100%;
-    padding-bottom: 5px;
-    margin-bottom: 5px;
-    border-bottom: 1px solid silver;
+    width: 780px;
+
+    border: 1px dashed black;
+    background-color:#ccccff;
+    padding: 5px;
+    margin-top: 10px;
+    margin-left:auto;
+    margin-right: auto;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
 }
 
 div.errorBox .line .lineNo {
@@ -53,7 +77,7 @@ div.errorBox .line .lineNo {
 }
 
 div.errorBox .line .message {
-    width: 758px;
+    width: 738px;
     display: block;
     float: left;
 }
