https://issues.apache.org/jira/browse/EXTSCRIPT-47 finishing works on the tag handler section so that the component attributes can be added on the fly.
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@901788 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/myfaces20-example/src/main/webapp/resources/styles/main.css
+++ b/examples/myfaces20-example/src/main/webapp/resources/styles/main.css
@@ -1,3 +1,8 @@
+body {
+    background-image:url("../resources/img/gradient1.jpg");
+    background-repeat:repeat-x;
+}
+
 #hello {
     background-color: yellow;
 }
@@ -7,6 +12,7 @@
     background-color: white;
     border: 1px solid black;
     -moz-border-radius: 5px;
+    padding: 5px;
     border-radius: 5px;
 }
 
