--- a/examples/myfaces20-example/src/main/webapp/resources/styles/main.css
+++ b/examples/myfaces20-example/src/main/webapp/resources/styles/main.css
@@ -10,8 +10,13 @@ div.centerDiv {
     width: 900px;
 }
 
+div.centerDiv form {
+    position: relative;
+}
+
 h1 {
     color: #ffff00;
+    text-align:center;
 }
 
 #hello {
@@ -22,10 +27,10 @@ h1 {
     display: block;
     width: 400px;
     background-color: white;
-    border: 1px solid black;
-    -moz-border-radius: 5px;
+    border: 1px solid white;
+    -moz-border-radius: 10px;
     padding: 5px;
-    border-radius: 5px;
+    border-radius: 8px;
     background-image: url("../resources/img/gradient1.jpg");
     background-repeat: repeat-x;
     margin-bottom: 5px;
@@ -103,6 +108,8 @@ div.errorBox .line .message {
     float: left;
 }
 
+
+
 .left {
     position: absolute;
     left: 10px;
@@ -113,4 +120,28 @@ div.errorBox .line .message {
     position: absolute;
     left: 430px;
     top: 20px;
+}
+
+.label {
+    font-weight: bold;
+    color: black;
+    width: 150px;
+    padding-right: 5px;
+}
+
+.input input, .input textArea {
+    width: 200px;
+}
+
+input, textArea {
+    border: 1px solid black;
+}
+
+input:focus, textArea:focus {
+    background-color: yellow;
+}
+
+input.btn {
+    width: 100px;
+    margin-left: 263px;
 }
