--- a/examples/myfaces20-example/src/main/webapp/resources/styles/main.css
+++ b/examples/myfaces20-example/src/main/webapp/resources/styles/main.css
@@ -1,6 +1,4 @@
 body {
-    background-image: url("../resources/img/sig07-009_mac.jpg");
-    background-repeat: no-repeat;
     background-color: black;
 }
 
@@ -15,26 +13,48 @@ div.centerDiv form {
 }
 
 h1 {
-    color: #ffff00;
-    text-align:center;
+    color: #9999ff;
+    text-align: center;
+}
+
+div#backGroundFloat {
+    position: fixed;
+    z-index: -1;
+    background-color: black;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    background-image: url("../resources/img/sig07-009_mac.jpg");
+    background-repeat: no-repeat;
+    overflow: hidden;
 }
 
 #hello {
     background-color: yellow;
 }
 
-.stdBox {
+.stdBox, .messageBox {
     display: block;
     width: 400px;
-    background-color: white;
     border: 1px solid white;
     -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
     padding: 5px;
     border-radius: 8px;
-    background-image: url("../resources/img/gradient1.jpg");
     background-repeat: repeat-x;
     margin-bottom: 5px;
     min-height: 120px;
+
+}
+
+.stdBox {
+    background-color: white;
+    background-image: url("../resources/img/gradient1.jpg");
+}
+
+.messageBox {
+    background-image: url("../resources/img/gradient2.png");
 }
 
 /*==================================================
@@ -65,13 +85,19 @@ div.errorBox {
 
     display: block;
     overflow: auto;
-    border: 1px solid black;
-    background-color: #ffffcc;
+    border: 1px solid white;
+    color:#dedddd;
+    opacity: 0.92;
 
-    -moz-border-radius: 5px;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
     border-radius: 5px;
+
     padding: 5px;
     margin-left: 10px;
+
+    background-image: url("../resources/img/gradient2.png");
+    background-repeat:repeat-x;
 }
 
 div.errorBox .line {
@@ -80,11 +106,14 @@ div.errorBox .line {
 
     border: 1px dashed black;
     background-color: #ccccff;
+    color:black;
     padding: 5px;
     margin-top: 10px;
     margin-left: auto;
     margin-right: auto;
     -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+
     border-radius: 5px;
 }
 
@@ -107,8 +136,6 @@ div.errorBox .line .message {
     display: block;
     float: left;
 }
-
-
 
 .left {
     position: absolute;
