--- a/examples/myfaces12-example/src/main/webapp/resources/styles/main.css
+++ b/examples/myfaces12-example/src/main/webapp/resources/styles/main.css
@@ -1,21 +1,61 @@
 body {
-    background-image:url("../img/gradient1.jpg");
-    background-repeat:repeat-x;
+    background-color: black;
+}
+
+div.centerDiv {
+    margin-left: auto;
+    margin-right: auto;
+    width: 900px;
+}
+
+div.centerDiv form {
+    position: relative;
+}
+
+h1 {
+    color: #9999ff;
+    text-align: center;
+}
+
+div#backGroundFloat {
+    position: fixed;
+    z-index: -1;
+    background-color: black;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    background-image: url("../img/sig07-009_mac.jpg");
+    background-repeat: no-repeat;
+    overflow: hidden;
 }
 
 #hello {
     background-color: yellow;
 }
 
-.stdBox {
-    display: table;
-    background-color: white;
-    border: 1px solid black;
-    -moz-border-radius: 5px;
+.stdBox, .messageBox {
+    display: block;
+    width: 400px;
+    border: 1px solid white;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
     padding: 5px;
-    border-radius: 5px;
+    border-radius: 8px;
+    background-repeat: repeat-x;
+    margin-bottom: 5px;
+    min-height: 120px;
+
 }
 
+.stdBox {
+    background-color: white;
+    background-image: url("../img/gradient1.jpg");
+}
+
+.messageBox {
+    background-image: url("../img/gradient2.png");
+}
 
 /*==================================================
     Basic CSS information for our compiler
@@ -40,18 +80,24 @@ div.warningsLabel {
 }
 
 div.errorBox {
-    width: 800px;
+    width: 820px;
     heigh: 200px;
-
 
     display: block;
     overflow: auto;
-    border: 1px solid black;
-    background-color: #ffffcc;
+    border: 1px solid white;
+    color:#dedddd;
+    opacity: 0.92;
 
-    -moz-border-radius:5px;
-    border-radius:5px;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    border-radius: 5px;
+
     padding: 5px;
+    margin-left: 10px;
+
+    background-image: url("../resources/img/gradient2.png");
+    background-repeat:repeat-x;
 }
 
 div.errorBox .line {
@@ -59,12 +105,15 @@ div.errorBox .line {
     width: 780px;
 
     border: 1px dashed black;
-    background-color:#ccccff;
+    background-color: #ccccff;
+    color:black;
     padding: 5px;
     margin-top: 10px;
-    margin-left:auto;
+    margin-left: auto;
     margin-right: auto;
     -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+
     border-radius: 5px;
 }
 
@@ -86,4 +135,40 @@ div.errorBox .line .message {
     width: 738px;
     display: block;
     float: left;
+}
+
+.left {
+    position: absolute;
+    left: 10px;
+    top: 20px;
+}
+
+.right {
+    position: absolute;
+    left: 430px;
+    top: 20px;
+}
+
+.label {
+    font-weight: bold;
+    color: black;
+    width: 150px;
+    padding-right: 5px;
+}
+
+.input input, .input textArea {
+    width: 200px;
+}
+
+input, textArea {
+    border: 1px solid black;
+}
+
+input:focus, textArea:focus {
+    background-color: yellow;
+}
+
+input.btn {
+    width: 100px;
+    margin-left: 263px;
 }
