https://issues.apache.org/jira/browse/EXTSCRIPT-84
https://issues.apache.org/jira/browse/EXTSCRIPT-85

The dynamic system events now work like a breeze it needs a little bit further testing
but I guess it is time for another commit.

git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@919200 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/myfaces20-example/src/main/webapp/resources/styles/main.css
+++ b/examples/myfaces20-example/src/main/webapp/resources/styles/main.css
@@ -88,6 +88,11 @@ div#menu a:hover {
 /*==================================================
     Basic CSS information for our
     taint history component
+    we do not use the compound
+    css for error and history
+    for readability reasons
+    although we have  load
+    of duplication here
 ====================================================*/
 
 div.historyBox {
@@ -140,7 +145,6 @@ div.historyBox .line .changedFile {
     display: block;
     float: left;
 }
-
 
 /*==================================================
     Basic CSS information for our compiler
