https://issues.apache.org/jira/browse/EXTSCRIPT-86
taint history component moved into the core package.

git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@920364 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/myfaces12-example/src/main/webapp/resources/styles/main.css
+++ b/examples/myfaces12-example/src/main/webapp/resources/styles/main.css
@@ -57,6 +57,68 @@ div#backGroundFloat {
     background-image: url("../img/gradient2.png");
 }
 
+
+/*==================================================
+    Basic CSS information for our
+    taint history component
+    we do not use the compound
+    css for error and history
+    for readability reasons
+    although we have  load
+    of duplication here
+====================================================*/
+
+div.historyBox {
+    width: 820px;
+    heigh: 200px;
+
+    display: block;
+    overflow: auto;
+    border: 1px solid white;
+    color: #dedddd;
+    opacity: 0.92;
+
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    border-radius: 5px;
+
+    padding: 5px;
+    margin-left: 10px;
+
+    background-image: url("../img/gradient2.png");
+    background-repeat: repeat-x;
+}
+
+div.historyBox .line {
+    display: table;
+    width: 780px;
+
+    border: 1px dashed black;
+    background-color: #ccccff;
+    color: black;
+    padding: 5px;
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+
+    border-radius: 5px;
+}
+
+div.historyBox .line .timestamp {
+    width: 120px;
+    float: left;
+    color: red;
+}
+
+div.historyBox .line .changedFile {
+    width: 650px;
+    overflow: hidden;
+    display: block;
+    float: left;
+}
+
 /*==================================================
     Basic CSS information for our compiler
     output component
